--- a/src/App.css
+++ b/src/App.css
@@ -38,17 +38,25 @@ h1 {
     margin: 0%;
 }
 
+.small-img {
+    width: 80%
+}
+
 .deck {
     background-color: #ababab;
     text-align: center;
     border: #161616 solid 1px;
+    display: flex;
+    flex: 0 0 33.3333%;
+    flex-wrap: wrap;
 }
 
-.cards {
-    display: flex;
-    justify-content: space-between;
-    border: #161616 solid 1px;
-    padding: 5px;
+
+.card {
+    padding: 10px;
+    margin: 10px;
+    background-color: yellowgreen;
+    flex: 0 0 20%;
 }
 
 .extra-cards {
