--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ p {
 h1 {
     font-size: 2rem;
     text-align: center;
+    padding: 2%;
 }
 
 .main-nav {
@@ -61,6 +62,10 @@ h1 {
     align-items: center;
 }
 
+.page-headings{
+ padding-top: 5%;
+}
+
 .deck {
     background-color: #ababab;
     text-align: center;
@@ -79,6 +84,12 @@ h1 {
 
 .small-img {
     width: 100%
+}
+
+.portfolio-headings {
+    background-color: #f9ee75;
+    width: 100%;
+    padding: 2%
 }
 
 .page {
