--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ h1 {
     padding: 3px 0px;
     text-align: center;
     font-family: "Karla", sans-serif;
-    font-size: x-large;
+    font-size: large;
     justify-content: space-evenly;
     align-items: center;
     border: #161616 solid 2px;
@@ -125,4 +125,82 @@ h1 {
     color: #6a6a6a;
     padding: 10%;
     text-align: center;
+}
+
+@media screen and (min-width: 650px) {
+
+    h1 {}
+
+
+    .main-nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .info {
+        border: #161616 solid 2px;
+        width: 60%;
+        margin: 5px;
+
+    }
+
+    .main-menu {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        margin: 20px;
+    }
+
+    .site-name-container {
+        margin: 20px;
+        padding: 20px;
+    }
+
+    .menu-item {
+        margin: 5px;
+        padding: 10px;
+
+    }
+
+    .page {
+        margin: 20px;
+        display: flex;
+        justify-content: center;
+
+    }
+
+    .main-about-line {
+        padding: 25px;
+    }
+
+    .clayton-img {
+        width: 20%;
+        padding: 0%;
+    }
+
+    .page-headings {
+        margin: 10px;
+        padding: 10px;
+        text-align: left;
+    }
+
+    .page-text {
+        padding: 25px;
+    }
+
+    .deck {}
+
+    .card {}
+
+    .small-img {}
+
+    .portfolio-headings {}
+
+
+    .contact-form {}
+
+    .footer {}
+
+
 }
