--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,14 @@ h1 {
     box-shadow: 5px 5px 5px #1616164f
 }
 
+.link-button {
+    border: #161616 solid 2px;
+    border-radius: 10px;
+    display: inline;
+    padding: 6px;
+    margin: 6px;
+}
+
 .clayton-img {
     width: 50%;
     display: block;
